; ModuleID = '/home/carl/AnghaBench/openssl/crypto/objects/extr_o_names.c_OBJ_NAME_cleanup.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/objects/extr_o_names.c_OBJ_NAME_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@names_lh = common dso_local global i32* null, align 8
@free_type = common dso_local global i32 0, align 4
@names_lh_free_doall = common dso_local global i32 0, align 4
@name_funcs_stack = common dso_local global i32* null, align 8
@name_funcs_free = common dso_local global i32 0, align 4
@obj_lock = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @OBJ_NAME_cleanup(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32*, i32** @names_lh, align 8
  %5 = icmp eq i32* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %30

7:                                                ; preds = %1
  %8 = load i32, i32* %2, align 4
  store i32 %8, i32* @free_type, align 4
  %9 = load i32*, i32** @names_lh, align 8
  %10 = call i64 @lh_OBJ_NAME_get_down_load(i32* %9)
  store i64 %10, i64* %3, align 8
  %11 = load i32*, i32** @names_lh, align 8
  %12 = call i32 @lh_OBJ_NAME_set_down_load(i32* %11, i64 0)
  %13 = load i32*, i32** @names_lh, align 8
  %14 = load i32, i32* @names_lh_free_doall, align 4
  %15 = call i32 @lh_OBJ_NAME_doall(i32* %13, i32 %14)
  %16 = load i32, i32* %2, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %26

18:                                               ; preds = %7
  %19 = load i32*, i32** @names_lh, align 8
  %20 = call i32 @lh_OBJ_NAME_free(i32* %19)
  %21 = load i32*, i32** @name_funcs_stack, align 8
  %22 = load i32, i32* @name_funcs_free, align 4
  %23 = call i32 @sk_NAME_FUNCS_pop_free(i32* %21, i32 %22)
  %24 = load i32*, i32** @obj_lock, align 8
  %25 = call i32 @CRYPTO_THREAD_lock_free(i32* %24)
  store i32* null, i32** @names_lh, align 8
  store i32* null, i32** @name_funcs_stack, align 8
  store i32* null, i32** @obj_lock, align 8
  br label %30

26:                                               ; preds = %7
  %27 = load i32*, i32** @names_lh, align 8
  %28 = load i64, i64* %3, align 8
  %29 = call i32 @lh_OBJ_NAME_set_down_load(i32* %27, i64 %28)
  br label %30

30:                                               ; preds = %6, %26, %18
  ret void
}

declare dso_local i64 @lh_OBJ_NAME_get_down_load(i32*) #1

declare dso_local i32 @lh_OBJ_NAME_set_down_load(i32*, i64) #1

declare dso_local i32 @lh_OBJ_NAME_doall(i32*, i32) #1

declare dso_local i32 @lh_OBJ_NAME_free(i32*) #1

declare dso_local i32 @sk_NAME_FUNCS_pop_free(i32*, i32) #1

declare dso_local i32 @CRYPTO_THREAD_lock_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
